chore: add tests
Signed-off-by: Akshay Patidar <akshaypatidar1999@gmail.com>